--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.19.0",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "openai": "^6.9.1"
   },
   "devDependencies": {
