--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "openai": "^6.9.1"
+    "multer": "^2.0.2",
+    "openai": "^6.9.1",
+    "pdf-parse": "^1.1.1",
+    "pdfkit": "^0.17.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
